# ul-fri-nlp-course-project-2025-2026-bytebanda

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-classla.txt  requirements.txt  scraper.ipynb
evaluation/: final_dataset.jsonl  generated_tax_eval_questions.jsonl  generated_tax_eval_questions_dual_citation.jsonl  generated_tax_eval_questions_dual_mixed.jsonl  generated_tax_eval_questions_dual_natural.jsonl  generated_tax_eval_questions_natural.jsonl  generated_web_questions.json  sample_questions.jsonl  tax_eval_questions.jsonl  web_suggestion_seed_questions.jsonl
logs/: dual-natural-smoke.jsonl  gams3-v100-test-15714853.err  gams3-v100-test-15714853.out  generated-eval-hybrid-lawcheck.jsonl  generated-eval-lawcheck.jsonl  generated-eval-llm-law-hints.jsonl  generated-eval.jsonl  generated-natural-hybrid-generation-9f522670.jsonl  generated-natural-hybrid-retrieval.jsonl  manual-eval-test.jsonl  model-compare-final-gams2-15722851.jsonl  model-compare-final-gams9-15722851.jsonl  model-compare-final-gams9-15725240.jsonl  model-compare-final-mistral-15722851.jsonl  model-compare-final-mistral-15725240.jsonl  model-compare-final-mistral-gams9-timings-15725240.tsv  model-compare-final-timings-15722851.tsv  model-compare-full-gams9-15716783.jsonl  model-compare-full-mistral-15716244.jsonl  model-compare-full-mistral-15716783.jsonl  model-compare-mistral-15713657.jsonl  rag-eval-results.jsonl  rag-mistral-gams9-15716244.err  rag-mistral-gams9-15716244.out  rag-mistral-gams9-15716783.err  rag-mistral-gams9-15716783.out  rag-mistral-gams9-15725240.err  (+51 more)
(+383 files in other folders)
