[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zakonodajko-rag"
version = "0.1.0"
description = "PISRS ingestion, Slovene NLP preprocessing, and hybrid retrieval baseline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Bytebanda" }
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "chromadb>=0.5,<0.7",
  "fastapi>=0.110,<1",
  "numpy<2",
  "pypdf>=5,<6",
  "rank-bm25>=0.2.2,<0.3",
  "requests>=2.31,<3",
  "sentence-transformers>=3.0,<4",
  "transformers>=4.40,<5",
  "tqdm>=4.66,<5",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
classla = [
  "classla>=2.2,<3",
  "numpy<2",
]

[project.scripts]
zakonodajko = "zakonodajko_rag.cli:main"
zakonodajko-classla = "zakonodajko_rag.classla_cli:main"

[tool.setuptools]
package-dir = {"" = "code"}

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.package-data]
zakonodajko_rag = ["static/*"]
